--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,27 +1,43 @@
+# GitHub Action for generating a contribution graph with a snake eating the contributions
 name: Generate Snake
 
+# Controls when the action will run
 on:
+  # Run automatically every 8 hours
   schedule:
     - cron: "0 */8 * * *"
 
+  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   build:
+    # This permissions block is the key fix
+    permissions:
+      contents: write
+
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+      # Checks out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
 
+      # Generates the snake SVG
       - uses: Platane/snk@v3
         id: snake-gif
         with:
+          # Your GitHub username. ${{ github.repository_owner }} will automatically use the repository owner's name.
           github_user_name: ${{ github.repository_owner }}
 
+          # The output files for the SVG
           outputs: |
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
 
+      # Pushes the generated SVG to the `output` branch
       - run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
